// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enum 1`] = `
Object {
  "@@type": "Test.TheEnum",
  "value": "First",
}
`;

exports[`Exception 1`] = `
Object {
  "@@type": "Test.TheError",
  "stringField": "kek",
}
`;

exports[`HashMap 1`] = `
Object {
  "@@type": "Ice.HashMap",
  "entries": Array [
    Object {
      "key": Object {
        "@@type": "Test.KeyStruct",
        "enumField": Object {
          "@@type": "Test.TheEnum",
          "value": "Second",
        },
        "intField": 24,
        "stringField": "bar",
      },
      "value": "kek",
    },
    Object {
      "key": Object {
        "@@type": "Test.KeyStruct",
        "enumField": Object {
          "@@type": "Test.TheEnum",
          "value": "First",
        },
        "intField": 42,
        "stringField": "foo",
      },
      "value": "lol",
    },
  ],
}
`;

exports[`Long 1`] = `
Object {
  "@@type": "Ice.Long",
  "value": 1099511627776,
}
`;

exports[`Long 2`] = `
Object {
  "@@type": "Ice.Long",
  "high": 20000000,
  "low": 0,
}
`;

exports[`Map with bool keys 1`] = `
Object {
  "@@type": "Map",
  "entries": Object {
    "false": Object {
      "@@type": "Test.TheStruct",
      "classField": Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 321,
        },
      },
      "longField": Object {
        "@@type": "Ice.Long",
        "value": 123,
      },
    },
    "true": Object {
      "@@type": "Test.TheStruct",
      "classField": Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 24,
        },
      },
      "longField": Object {
        "@@type": "Ice.Long",
        "value": 42,
      },
    },
  },
}
`;

exports[`Map with enum keys 1`] = `
Object {
  "@@type": "Map",
  "entries": Object {
    "{\\"@@type\\":\\"Test.TheEnum\\",\\"value\\":\\"First\\"}": "second",
  },
}
`;

exports[`Map with int keys 1`] = `
Object {
  "@@type": "Map",
  "entries": Object {
    "-1": Object {
      "@@type": "Test.TheStruct",
      "classField": Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 321,
        },
      },
      "longField": Object {
        "@@type": "Ice.Long",
        "value": 123,
      },
    },
    "1": Object {
      "@@type": "Test.TheStruct",
      "classField": Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 24,
        },
      },
      "longField": Object {
        "@@type": "Ice.Long",
        "value": 42,
      },
    },
  },
}
`;

exports[`Map with string keys 1`] = `
Object {
  "@@type": "Map",
  "entries": Object {
    "\\"kek\\"": Object {
      "@@type": "Test.TheStruct",
      "classField": Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 321,
        },
      },
      "longField": Object {
        "@@type": "Ice.Long",
        "value": 123,
      },
    },
    "\\"lol\\"": Object {
      "@@type": "Test.TheStruct",
      "classField": Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 24,
        },
      },
      "longField": Object {
        "@@type": "Ice.Long",
        "value": 42,
      },
    },
  },
}
`;

exports[`Proxy 1`] = `
Object {
  "@@type": "Ice.LocatorPrx",
  "value": "Category/Name -t -e 1.1:tcp -h blabla -p 1234 -t 60000",
}
`;

exports[`Set 1`] = `
Object {
  "@@type": "Set",
  "value": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`Struct 1`] = `
Object {
  "@@type": "Test.TheStruct",
  "classField": Object {
    "@@type": "Test.SmallClass",
    "longField": Object {
      "@@type": "Ice.Long",
      "value": 24,
    },
  },
  "longField": Object {
    "@@type": "Ice.Long",
    "value": 42,
  },
}
`;

exports[`Value 1`] = `
Object {
  "@@type": "Test.SmallClass",
  "longField": Object {
    "@@type": "Ice.Long",
    "value": 42,
  },
}
`;

exports[`keywords 1`] = `
Object {
  "await": Object {
    "@@type": "Test.Keywords.Await",
    "import": 1,
  },
  "break": Object {
    "@@type": "Test.Keywords.Break",
    "yield": "yield",
  },
  "catch": Object {
    "@@type": "Map",
    "entries": Object {},
  },
  "try": Object {
    "@@type": "Test.Keywords.Continue",
    "value": "TRY",
  },
}
`;

exports[`recursive 1`] = `
Object {
  "array": Array [
    Object {
      "@@type": "Test.TheEnum",
      "value": "First",
    },
    Object {
      "@@type": "Test.SmallClass",
      "longField": Object {
        "@@type": "Ice.Long",
        "value": 42,
      },
    },
  ],
  "bool": true,
  "int": 42,
  "nested": Object {
    "error": Object {
      "@@type": "Test.TheError",
      "stringField": "kek",
    },
    "struct": Object {
      "@@type": "Test.TheStruct",
      "classField": Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 24,
        },
      },
      "longField": Object {
        "@@type": "Ice.Long",
        "value": 42,
      },
    },
  },
  "null": null,
  "rich": Object {
    "@@type": "Test.RichClass",
    "enumField": Object {
      "@@type": "Test.TheEnum",
      "value": "Second",
    },
    "longField": Object {
      "@@type": "Ice.Long",
      "high": 20000000,
      "low": 0,
    },
    "optionalField": undefined,
    "primitiveKeyDictField": Object {
      "@@type": "Map",
      "entries": Object {
        "\\"foo\\"": Object {
          "@@type": "Test.TheStruct",
          "classField": null,
          "longField": Object {
            "@@type": "Ice.Long",
            "value": 0,
          },
        },
      },
    },
    "primitiveSeqField": Array [
      "lol",
      "kek",
    ],
    "smallClassSeqField": Array [
      Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 42,
        },
      },
      Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 24,
        },
      },
    ],
    "structField": Object {
      "@@type": "Test.TheStruct",
      "classField": Object {
        "@@type": "Test.SmallClass",
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 24,
        },
      },
      "longField": Object {
        "@@type": "Ice.Long",
        "value": 42,
      },
    },
    "structSeqField": Array [
      Object {
        "@@type": "Test.TheStruct",
        "classField": Object {
          "@@type": "Test.SmallClass",
          "longField": Object {
            "@@type": "Ice.Long",
            "value": 24,
          },
        },
        "longField": Object {
          "@@type": "Ice.Long",
          "value": 42,
        },
      },
    ],
  },
  "string": "123",
  "undefined": undefined,
}
`;
